--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
     <h1 class="mx-auto my-4 text-center">Welcome to the RoboTender</h1>
 
     <div class="container alcoholFilter">
-        <div class="d-grid gap-2"> 
-        <button type="button" class="btn btn-primary btn-lg" onclick="displayDrinkOptions('vodka')">
+        <div class="d-flex justify-content-around mb-5"> 
+        
+        <button type="button" class="btn btn-primary " onclick="displayDrinkOptions('vodka')">
             <h2>Vodka</h2>
         </button>
-       <button type="button" class="btn btn-primary btn-lg " onclick="displayDrinkOptions('gin')">
+       <button type="button" class="btn btn-primary  " onclick="displayDrinkOptions('gin')">
             <h2>Gin</h2>
        </button>
-       <button type="button" class="btn btn-primary btn-lg" onclick="displayDrinkOptions('tequila')">
+       <button type="button" class="btn btn-primary " onclick="displayDrinkOptions('tequila')">
             <h2>Tequila</h2>
        </button>
-       <button type="button" class="btn btn-primary btn-lg" onclick="displayDrinkOptions('rum')">
+       <button type="button" class="btn btn-primary " onclick="displayDrinkOptions('rum')">
             <h2>Rum</h2>
        </button>
-       <button type="button" class="btn btn-primary btn-lg" onclick="displayDrinkOptions('whiskey')">
+       <button type="button" class="btn btn-primary " onclick="displayDrinkOptions('whiskey')">
             <h2>Whiskey</h2>
        </button></div>
        
     </div>
     <div class="container  d-none">
-        <p onclick="back()"><span><</span>Back</p>
-        <div class="drinks row "></div>
+        <!-- <p onclick="back()"><span><</span>Back</p> -->
+        <div class="drinks "></div>
 
     </div>
     <!-- Modal -->
