--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload='suggested()'>
-    <h1 class="mx-auto my-4 text-center">Welcome to the RoboTender</h1>
+    <h1 class="mx-auto my-4 text-center">Welcome to the Rob<i class="bi bi-gear" data-toggle="modal" data-target="#pumpsModal"></i>Tender</h1>
 
     <div class="container alcoholFilter">
         <div class="d-flex justify-content-around mb-5 nav"> 
@@ -54,6 +55,36 @@
         <div class="modal-footer text-center">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary">Order Now</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+   <!-- PUMPS Modal -->
+   <div class="modal fade" id="pumpsModal" tabindex="-1" role="dialog" aria-labelledby="pumpsModalTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="pumpsModalTitle">Drink Options</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="pumpSet">
+            <ul>
+              <li>Pump1 </li>
+              <li>Pump2 </li>
+              <li>Pump3 </li>
+              <li>Pump4</li>
+            </ul>
+          </div>
+            
+        </div>
+        <div class="modal-footer text-center">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Save</button>
+
         </div>
       </div>
     </div>
