--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </button>
         </div>
         <div class="modal-body">
-            <ul class='ingredients'></ul>
+            <div class='ingredients'></div>
         </div>
         <div class="modal-footer text-center">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
