added pump set functionality

--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
         <div class="modal-body">
           <div class="pumpSet">
             <ul>
-              <li>Pump1 </li>
-              <li>Pump2 </li>
-              <li>Pump3 </li>
-              <li>Pump4</li>
+              <li id="pump1">Pump1 </li>
+              <li  id="pump2">Pump2 </li>
+              <li  id="pump3">Pump3 </li>
+              <li  id="pump4">Pump4</li>
             </ul>
           </div>
             
         </div>
         <div class="modal-footer text-center">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Save</button>
+          <button type="button" id="savePumps" class="btn btn-secondary" data-dismiss="modal">Save</button>
 
         </div>
       </div>
