added check order logic

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
           </button>
         </div>
         <div class="modal-body">
-            <div class='ingredients'></div>
+            <div class='ingredients' id="ingredientContainer"></div>
         </div>
         <div class="modal-footer text-center">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Order Now</button>
+          <button type="button" onclick = "order(this)" class="btn btn-primary">Order Now</button>
         </div>
       </div>
     </div>
