clean mode started

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
             
         </div>
         <div class="modal-footer text-center">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary d-none" onclick = "cleanMode()">Clean Mode</button>
           <button type="button" id="savePumps" class="btn btn-secondary" data-dismiss="modal">Save</button>
+          <button type="button" id="cleanPumps" class="btn btn-secondary d-none" onclick="cleaning()" data-dismiss="modal">Continue to Clean</button>
 
         </div>
       </div>
