--- a/index.html
+++ b/index.html
@@ -1,100 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body onload='suggested()'>
-    <h1 class="mx-auto my-4 text-center">Welcome to the Rob<i class="bi bi-gear" data-toggle="modal" data-target="#pumpsModal"></i>Tender</h1>
 
-    <div class="container alcoholFilter">
-        <div class="d-flex justify-content-around mb-5 nav"> 
-          <div class="nav-item" onclick="suggested()">
-            <h5>Suggested</h5>
+<body onload="setUp()">
+    <div class="container mt-5 text-center">
+        <img src="logo-placeholder.png" alt="" class="img-fluid mx-auto w-25 p-3">
+        <br>
+        <p class="title login">Login Now </p>
+        <p class="title sign-up d-none">Register Now</p>
+        <form class="mx-5 pt-4">
+            <div class="form-group ">
+                <input type="email" class="form-control" id="email" placeholder="Email" class="text-center" required>
+            </div>
+
+            <div class="form-group mb-4">
+                <input type="password" class="form-control" id="password" placeholder="Password" class="text-center" required> 
+            </div>
+
+            <div class="form-group sign-up d-none">
+                <input type="text" class="form-control" placeholder="First name">
+
+            </div>
+            <div class="form-group sign-up  d-none">
+                <input type="text" class="form-control" placeholder="Last name">
+
+            </div>
+            <div class="form-group mb-4 sign-up  d-none">
+                <input type="tel" class="form-control" id="tel" placeholder="Phone Number" class="text-center">
+            </div>
+            <div class="form-group mb-4 sign-up  d-none">
+                <input type="number" class="form-control" id="eventcode" placeholder="Event Code" class="text-center">
+            </div>
+
+            <div class="form-group sign-up  d-none">
+
+                <div class="row text-center">
+                    <p class="px-3 pt-1 col-9 text-left">Okay with Text Messages?</p>
+                    <label class="switch ">
+
+                        <input type="checkbox">
+
+                        <span class="slider round"></span>
+                    </label>
+
+                </div>
+                <div class="row text-center">
+                    <p class="px-3 pt-1 col-9 text-left">Okay with Emails?</p>
+                    <label class="switch ">
+
+                        <input type="checkbox">
+
+                        <span class="slider round"></span>
+                    </label>
+
+                </div>
+
+            </div>
         </div>
-        <div class="nav-item" onclick="displayDrinkOptions('vodka')">
-            <h5>Vodka</h5>
-        </div>
-       <div class="nav-item" onclick="displayDrinkOptions('gin')">
-            <h5>Gin</h5>
-       </div>
-       <div class="nav-item" onclick="displayDrinkOptions('tequila')">
-            <h5>Tequila</h5>
-       </div>
-       <div class="nav-item" onclick="displayDrinkOptions('rum')">
-            <h5>Rum</h5>
-       </div>
-       <div class="nav-item" onclick="displayDrinkOptions('whiskey')">
-            <h5>Whiskey</h5>
-       </div>
-       
+
+   
+    </form>
+    <div class="btns text-center">
+            <button class="btn-form solid mx-3 login" onclick ="passCheck()">Log In</button> <button class="mx-3 outlined btn-form login" onclick="signUp()">Sign Up</button>
+            <button class="sign-up solid btn-form d-none">Register Now</button><button class="sign-up outlined btn-form d-none mx-3" onclick="login()">Have an account?</button>
+            <p class="mt-4"><u><a href="">Forgot Password?</a></u></p>
     </div>
-    <div class="container  d-none">
-        <!-- <p onclick="back()"><span><</span>Back</p> -->
-        <div class="drinks "></div>
+
 
     </div>
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalTitle" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="myModalTitle">Drink Options</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <div class='ingredients' id="ingredientContainer"></div>
-        </div>
-        <div class="modal-footer text-center">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" id="order" onclick = "order(this)" class="btn btn-primary">Order Now</button>
-          <button class='btn btn-primary d-none' id="loading" type='button' disabled><span class='spinner-border spinner-border-sm' role='status' aria-hidden='true'></span><span class='sr-only'>Loading...</span></button>
-        </div>
-      </div>
-    </div>
-  </div>
 
-   <!-- PUMPS Modal -->
-   <div class="modal fade" id="pumpsModal" tabindex="-1" role="dialog" aria-labelledby="pumpsModalTitle" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="pumpsModalTitle">Drink Options</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="pumpSet">
-            <ul>
-              <li id="pump1">Pump1 </li>
-              <li  id="pump2">Pump2 </li>
-              <li  id="pump3">Pump3 </li>
-              <li  id="pump4">Pump4</li>
-            </ul>
-          </div>
-            
-        </div>
-        <div class="modal-footer text-center">
-          <button type="button" class="btn btn-secondary d-none" onclick = "cleanMode()">Clean Mode</button>
-          <button type="button" id="savePumps" class="btn btn-secondary" data-dismiss="modal">Save</button>
-          <button type="button" id="cleanPumps" class="btn btn-secondary d-none" onclick="cleaning()" data-dismiss="modal">Continue to Clean</button>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <script src="login.js"></script>
 
-        </div>
-      </div>
-    </div>
-  </div>
-    <script type="text/javascript" src="drinks.json"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src ="drinks.js"></script>
 </body>
+
 </html>
