--- a/drink.html
+++ b/drink.html
@@ -60,7 +60,27 @@
       </div>
     </div>
   </div>
+  <div class="modal fade" id="pumpsModal" tabindex="-1" role="dialog" aria-labelledby="pumpsModalTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="pumpsModalTitle">Drink Options</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+        <h2>Please vote for us by sending an email to egrseniordesign@unlv.edu with subject Robotender</h2>
+        </div>
+        <div class="modal-footer text-center">
+          <button type="button" class="btn btn-secondary d-none" onclick = "cleanMode()">Clean Mode</button>
+          <button type="button" id="savePumps" class="btn btn-secondary" data-dismiss="modal">Save</button>
+          <button type="button" id="cleanPumps" class="btn btn-secondary d-none" onclick="cleaning()" data-dismiss="modal">Continue to Clean</button>
 
+        </div>
+      </div>
+    </div>
+  </div>
    <!-- PUMPS Modal -->
    <div class="modal fade" id="pumpsModal" tabindex="-1" role="dialog" aria-labelledby="pumpsModalTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -96,5 +116,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src ="drinks.js"></script>
+    <script type="text/javascript">
+      $(window).on('load', function() {
+          $('#vote').modal('show');
+      });
+  </script>
 </body>
 </html>
