--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
 <body onload="setUp()">
     <div class="container mt-5 text-center">
+
         <img src="logo-placeholder.png" alt="" class="img-fluid mx-auto w-25 p-3">
         <br>
+        <p>To see our test site, login with user1@gmail.com and any password</p>
         <p class="title login">Login Now </p>
         <p class="title sign-up d-none">Register Now</p>
         <form class="mx-5 pt-4">
