--- a/drink.html
+++ b/drink.html
@@ -60,11 +60,11 @@
       </div>
     </div>
   </div>
-  <div class="modal fade" id="pumpsModal" tabindex="-1" role="dialog" aria-labelledby="pumpsModalTitle" aria-hidden="true">
+  <div class="modal fade" id="vote" tabindex="-1" role="dialog" aria-labelledby="pumpsModalTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="pumpsModalTitle">Drink Options</h5>
+          <h5 class="modal-title" id="">Drink Options</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
